--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@ button:hover {
 
   <section id="contact">
     <h2>Send Me a Message</h2>
-    <form action="https://formspree.io/f/mqaeoawk" method="POST">
+    <form action="https://formspree.io/f/mrbqbbzd" method="POST">
       <input type="text" name(client)="name" placeholder="Your Name" required/>
       <input type="email" name="email" placeholder="Your Email" required/>
       <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
