--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Marc's Scrapbook Portfolio</title>
-  <link rel="website icon" type="image/png" href="blob:https://www.facebook.com/fcb0e665-95c0-44db-9ccc-bd1397a0bfe4">
+  <link rel="website icon" type="image/png" href="https://t4.ftcdn.net/jpg/03/50/57/67/240_F_350576735_xxoiB6GcesujSEcu6cvROhrPcPkEfzaS.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Quicksand&display=swap');
