--- a/index.html
+++ b/index.html
@@ -473,9 +473,9 @@ button:hover {
 
   <section id="about">
     <div class="profile">
-      <img src="https://scontent.fmnl4-1.fna.fbcdn.net/v/t39.30808-1/484217089_1367723144428567_8918620345163373824_n.jpg?stp=dst-jpg_s200x200_tt6&_nc_cat=106&ccb=1-7&_nc_sid=e99d92&_nc_eui2=AeGX-FEOdNU3jwOAr7YzxAOKrtAhf1mE_G2u0CF_WYT8bVBM303CpzmjTAd8IjFekDuS91baEqGSBOgBAIVU8FFX&_nc_ohc=HyjPyKGKclUQ7kNvwHYoWTR&_nc_oc=AdmRZjdj3jL8Eexa6Le1yQBMeWi6Fw3Fvcdu9YlJmNoTSfQIfPCiw0VU4MSFRlYLonU5diM0TyaW8J-go0ZHW8gl&_nc_zt=24&_nc_ht=scontent.fmnl4-1.fna&_nc_gid=VOyc7e79ktcRXg3se-gaDg&oh=00_AfGcsraS5q6LZbDKD9BdRHXA2ZPfDnj0ywWrOjmKS1lIjQ&oe=680E6501" alt="Marc Profile"/>
+      <img src="https://scontent.fmnl4-1.fna.fbcdn.net/v/t39.30808-6/484217089_1367723144428567_8918620345163373824_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeGX-FEOdNU3jwOAr7YzxAOKrtAhf1mE_G2u0CF_WYT8bVBM303CpzmjTAd8IjFekDuS91baEqGSBOgBAIVU8FFX&_nc_ohc=qdavBE9K06IQ7kNvwGndaaI&_nc_oc=Admr8GIEIkJFqCz8lRhQHVlJ0rRsvTrpeih_ZZeDWneaQHsBv_f03Gbfv8M0pNIssQ_sRi8YnvsMrSUCZG6yae0C&_nc_zt=23&_nc_ht=scontent.fmnl4-1.fna&_nc_gid=MqZ0Loh6aTC257e1L8QF5A&oh=00_AfG9A8cd5v4_Lu5R0OZTn8ldJl8omEcQQFVDqA-tfA1Mng&oe=68152E83" alt="Marc Profile"/>
       <h2>About Me</h2>
-      <p>I'm Raymarc – a senior highschool student, pianist, and web enthusiast from the Philippines.</p>
+      <p>I'm Raymarc – a senior highschool student, and web enthusiast from the Philippines.</p>
     </div>
     <div class="timeline">
       <div class="timeline-item">Started my coding journey in high school.</div>
