--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@ button:hover {
   <section id="works">
     <h2>My Works</h2>
     <div class="works">
-      <button onclick="openModal('Work 1', 'blob:https://www.facebook.com/70b2a31a-5e34-438a-9048-96c59dde05a3', 'This mobile-friendly portfolio dashboard showcases a creative developer and designer with a clean, card-based layout. It features sections for personal intro, projects, and skill levels in HTML, CSS, JavaScript, and Python. The minimalist design with soft shadows and vibrant gradients makes it both visually appealing and easy to navigate. https://marc15mr.github.io/Dash-Board-Style/')">
+      <button onclick="openModal('Work 1', 'https://via.placeholder.com/400x250?text=Work+1', 'This is the description for Work 2.')">
         <img src="https://via.placeholder.com/200x130?text=Work+1" alt="Work 1">
       </button>
     </div>
