--- a/index.html
+++ b/index.html
@@ -593,21 +593,9 @@ button:hover {
         <img src="https://via.placeholder.com/120x80?text=Secret+2" alt="Secret Work 2"/>
       </div>
     </div>
-
-<!-- 🧰 Tech Stack -->
-<div class="tech-stack">
-  <h3>🧰 Tech Stack</h3>
-  <div class="stack-icons">
-    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML5" title="HTML5" />
-    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS3" title="CSS3" />
-    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript" title="JavaScript" />
-    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/firebase/firebase-plain.svg" alt="Firebase" title="Firebase" />
-    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python" title="Python" />
-  </div>
-</div>
    
 <!-- Skill Stirrers Section -->
-    <h4>Tecnical Skills</h4>
+    <h4>Technical Skills</h4>
     <div class="skills">
       <div class="skill">
         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML" />
