--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@ button:hover {
     </div>
 
     <!-- Skill Stirrers Section -->
-    <h4>My Tecnical Skills</h4>
+    <h4> Technical Skills</h4>
     <div class="skills">
       <div class="skill">
         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML" />
@@ -787,8 +787,8 @@ button:hover {
   <section id="works">
     <h2>My Works</h2>
     <div class="works">
-      <button onclick="openModal('Work 1', 'https://via.placeholder.com/400x250?text=Work+1', 'This is the description for Work 1.')">
-        <img src="https://via.placeholder.com/200x130?text=Work+1" alt="Work 1">
+       <button onclick="openModal('Work 1', 'https://scontent.fmnl4-6.fna.fbcdn.net/v/t1.15752-9/494690378_4043746762561672_2460516455980839563_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=0024fc&_nc_ohc=RKYIOkjlhTIQ7kNvwGuIZNn&_nc_oc=AdnZ-CGmpPNYlQXT7CSuAx-EHnzUgWSUiA0YKrIOXz67O-3kMX7lceyChiE6dVGDj08Vuwn55-okWyeQIOY-m3KE&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent.fmnl4-6.fna&oh=03_Q7cD2AElCTmHtBHs_Q1tPyQcIvumTgiELC2tIt6SLFZAVPgpag&oe=6839D7EB', 'This mobile-friendly portfolio dashboard showcases a creative developer and designer with a clean, card-based layout. It features sections for personal intro, projects, and skill levels in HTML, CSS, JavaScript, and Python. The minimalist design with soft shadows and vibrant gradients makes it both visually appealing and easy to navigate.')">
+        <img src="https://scontent.fmnl4-6.fna.fbcdn.net/v/t1.15752-9/494690378_4043746762561672_2460516455980839563_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=0024fc&_nc_ohc=RKYIOkjlhTIQ7kNvwGuIZNn&_nc_oc=AdnZ-CGmpPNYlQXT7CSuAx-EHnzUgWSUiA0YKrIOXz67O-3kMX7lceyChiE6dVGDj08Vuwn55-okWyeQIOY-m3KE&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent.fmnl4-6.fna&oh=03_Q7cD2AElCTmHtBHs_Q1tPyQcIvumTgiELC2tIt6SLFZAVPgpag&oe=6839D7EB" alt="Work 1">
       </button>
       <button onclick="openModal('Work 2', 'https://via.placeholder.com/400x250?text=Work+2', 'This is the description for Work 2.')">
         <img src="https://via.placeholder.com/200x130?text=Work+2" alt="Work 2">
