--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            min-height: 85vh;
+            min-height: 80vh;
             background-color: rgba(0, 0, 20, 0.85);
             padding: 2rem;
         }
@@ -754,7 +754,7 @@
             color: #6DA5C0;
             margin-bottom: 20px;
             text-align: center;
-            font-family: 'Segoe UI', sans-serif;
+            font-family: 'Permanent Marker', sans-serif;
         }
 
 
@@ -1012,7 +1012,7 @@
                             <div class="timeline-dot"></div>
                             <div class="timeline-content">
                                 <h4> Student</h4>
-                                <p>Studying in the Philippines, striving to grow and learn every day.</p>
+                                <p>Currently a senior high school student passionate about technology and just beginning my journey into web development.</p>
                             </div>
                         </div>
                         <div class="timeline-item">
@@ -1223,7 +1223,7 @@
                 .typeString("Welcome to My Portfolio")
                 .pauseFor(1500)
                 .deleteAll()
-                .typeString("Explore. Dream. Create.")
+                .typeString("01001100,01100101,01100101,01101110")
                 .pauseFor(2000)
                 .start();
 
