--- a/index.html
+++ b/index.html
@@ -1223,7 +1223,7 @@
                 .typeString("Welcome to My Portfolio")
                 .pauseFor(1500)
                 .deleteAll()
-                .typeString("01001100,01100101,01100101,01101110")
+                .typeString("Isaiah 60:22")
                 .pauseFor(2000)
                 .start();
 
@@ -1329,7 +1329,7 @@
                     overlay.style.display = "none";
                     document.querySelector(".flip-card").style.display = "block";
                 }, 2000); // Wait for fade-out to finish
-            }, 5000); // After 4 seconds of animation
+            }, 5500); // After 4 seconds of animation
 
         </script>
 </body>
