--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
             color: #6DA5C0;
             margin-bottom: 20px;
             text-align: center;
-            font-family: 'Permanent Marker', sans-serif;
+            font-family: 'Permanent Marker';
         }
 
 
