--- a/index.html
+++ b/index.html
@@ -921,6 +921,108 @@
         .fade-out {
             animation: fadeOut 1s ease forwards;
         }
+
+        /* Hologram Ring Styles */
+        .container {
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 200px;
+            height: 200px;
+            transition: 0.5s ease;
+            transform-style: preserve-3d;
+            user-select: none;
+            cursor: crosshair;
+        }
+
+        .container:hover {
+            transform: rotateX(45deg) rotateY(-30deg) scale(1.3);
+        }
+
+        .container .ring {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            mask: radial-gradient(#0000 var(--i), #000 var(--i), #000 var(--o), #0000 var(--o));
+            transition: 0.3s;
+        }
+
+        .r01 {
+            background: conic-gradient(#0ff 100%, #0000 100%);
+            --i: 70%;
+            --o: 71%;
+        }
+
+        .r02 {
+            background: conic-gradient(#0ff 05%, #0000 05%, #0000 9%, #0ff 09%, #0ff 20%, #0000 20%, #0000 25%, #0ff 25%,
+                    #0ff 37%, #0000 37%, #0000 42%, #0ff 42%, #0ff 49%, #0000 49%, #0000 55%, #0ff 55%,
+                    #0ff 65%, #0000 65%, #0000 72%, #0ff 72%, #0ff 80%, #0000 80%, #0000 86%, #0ff 86%,
+                    #0ff 95%, #0000 95%);
+            --i: 57%;
+            --o: 60%;
+            animation: anime 7s ease-in-out infinite alternate;
+        }
+
+        .r03 {
+            background: conic-gradient(#ffd000 85%, #0000 85%);
+            --i: 50%;
+            --o: 50.7%;
+            animation: anime 3s ease-in-out infinite alternate;
+        }
+
+        .r04,
+        .r051,
+        .r052 {
+            background: conic-gradient(#0000 20%, #0ff 20%, #0ff 40%, #0000 40%, #0000 67%, #0ff 67%, #0ff 85%, #0000 85%);
+            --i: 39.5%;
+            --o: 40%;
+            animation: anime 4s ease-in-out infinite alternate;
+        }
+
+        .r06 {
+            background: conic-gradient(#0000 20%, #0ff 20%, #0ff 35%, #0000 35%, #0000 67%, #0ff 67%, #0ff 95%, #0000 95%);
+            --i: 30%;
+            --o: 30.5%;
+            animation: anime 2s ease-in-out infinite alternate;
+        }
+
+        .r07 {
+            background: conic-gradient(#0ff 100%, #0000 100%);
+            --i: 16%;
+            --o: 17.3%;
+        }
+
+        .r08 {
+            background: conic-gradient(#ffd000 75%, #0000 75%);
+            --i: 10%;
+            --o: 11%;
+            animation: anime 5s ease-in-out infinite alternate;
+        }
+
+        .r09 {
+            background: conic-gradient(#0ff 100%, #0000 100%);
+            --i: 3%;
+            --o: 3.4%;
+        }
+
+        .container:hover .r02,
+        .container:hover .r04,
+        .container:hover .r051,
+        .container:hover .r052,
+        .container:hover .r08,
+        .container:hover .r09 {
+            transform: translateZ(50px);
+        }
+
+        @keyframes anime {
+            to {
+                rotate: 360deg;
+            }
+        }
+
+
     </style>
 </head>
 
@@ -998,10 +1100,18 @@
 
                 <!-- Front -->
                 <div class="flip-card-front">
-                    <div class="logo-image-container">
-                        <img src="https://scontent.fmnl4-1.fna.fbcdn.net/v/t1.15752-9/494358169_687469337361553_3230157421182129637_n.jpg?stp=dst-jpg_p480x480_tt6&_nc_cat=103&ccb=1-7&_nc_sid=0024fc&_nc_ohc=ZOKhSruSvrUQ7kNvwHVQYr4&_nc_oc=Adl_3HbVP14UiqNtCH9a0uBQfnGgxuKcgq9QhZ-yxvtNUDcbWYePrmuC4oR_xfi2vRhO-P5PV1fBxy8MgWdQBluU&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent.fmnl4-1.fna&oh=03_Q7cD2QGEdB2HzMnmFprU5dWyaBQ8s9GDfL3MRvi-v-KLpccvBQ&oe=684B07D7"
-                            alt="Your Logo" class="logo-image" />
-                    </div>
+                     <div class="container">
+    <div class="ring r01"></div>
+    <div class="ring r02"></div>
+    <div class="ring r03"></div>
+    <div class="ring r04"></div>
+    <div class="ring r051"></div>
+    <div class="ring r052"></div>
+    <div class="ring r06"></div>
+    <div class="ring r07"></div>
+    <div class="ring r08"></div>
+    <div class="ring r09"></div>
+  </div>
                 </div>
 
                 <!-- Back Side with Timeline -->
