--- a/index.html
+++ b/index.html
@@ -1506,6 +1506,119 @@
         #jarvisNotification.show {
             opacity: 1;
         }
+
+        #works {
+            padding: 2rem;
+            background-color: rgba(0, 0, 20, 0.85);
+            /* Dark navy blue */
+            color: #e0e6ed;
+            font-family: sans-serif;
+        }
+
+        .work-card {
+            background: #112244;
+            /* Deeper navy */
+            border-radius: 12px;
+            overflow: hidden;
+            width: 320px;
+            margin: auto;
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
+            transition: transform 0.3s ease;
+        }
+
+        .work-card:hover {
+            transform: translateY(-5px);
+        }
+
+        .work-card img {
+            width: 100%;
+            height: auto;
+            display: block;
+        }
+
+        .card-content {
+            padding: 1rem;
+        }
+
+        .card-content h3 {
+            margin-top: 0.5rem;
+            font-size: 1.25rem;
+            color: #d8e1f3;
+            /* Light navy-blue text */
+        }
+
+        .card-content p {
+            color: #a9bcd0;
+            font-size: 0.9rem;
+            margin-bottom: 1rem;
+        }
+
+        .tags {
+            display: flex;
+            gap: 0.5rem;
+            flex-wrap: wrap;
+            margin-bottom: 1rem;
+        }
+
+        .tags span {
+            background: #1a2f4d;
+            /* Muted navy */
+            color: #b5c7de;
+            padding: 0.3rem 0.6rem;
+            border-radius: 6px;
+            font-size: 0.75rem;
+        }
+
+        .buttons {
+            display: flex;
+            gap: 0.5rem;
+        }
+
+        .buttons a {
+            text-decoration: none;
+            padding: 0.5rem 1rem;
+            border-radius: 6px;
+            font-size: 0.8rem;
+            font-weight: bold;
+            transition: background 0.3s, color 0.3s, border 0.3s;
+        }
+
+        .live-demo {
+            background: #d8e1f3;
+            color: #0b1d3a;
+        }
+
+        .view-code {
+            background: transparent;
+            color: #d8e1f3;
+            border: 1px solid #d8e1f3;
+        }
+
+        .view-code:hover {
+            background: #d8e1f3;
+            color: #0b1d3a;
+        }
+
+        .live-demo:hover {
+            background: #b5c7de;
+            color: #0b1d3a;
+        }
+
+        .description {
+            font-size: 0.95rem;
+            color: #a8b2d1;
+        }
+
+        .more-text {
+            display: none;
+        }
+
+        .see-more {
+            color: #ffffff;
+            font-weight: 600;
+            cursor: pointer;
+            margin-left: 5px;
+        }
     </style>
 </head>
 
@@ -1633,35 +1746,37 @@
 
     <section id="works">
         <h2>My Works</h2>
-        <div class="works">
-            <button
-                onclick="openModal('Work 1', 'https://scontent.fmnl4-6.fna.fbcdn.net/v/t1.15752-9/494690378_4043746762561672_2460516455980839563_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=0024fc&_nc_ohc=RKYIOkjlhTIQ7kNvwGuIZNn&_nc_oc=AdnZ-CGmpPNYlQXT7CSuAx-EHnzUgWSUiA0YKrIOXz67O-3kMX7lceyChiE6dVGDj08Vuwn55-okWyeQIOY-m3KE&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent.fmnl4-6.fna&oh=03_Q7cD2AElCTmHtBHs_Q1tPyQcIvumTgiELC2tIt6SLFZAVPgpag&oe=6839D7EB', 'This mobile-friendly portfolio dashboard showcases a creative developer and designer with a clean, card-based layout. It features sections for personal intro, projects, and skill levels in HTML, CSS, JavaScript, and Python. The minimalist design with soft shadows and vibrant gradients makes it both visually appealing and easy to navigate.')">
-                <img src="https://scontent.fmnl4-6.fna.fbcdn.net/v/t1.15752-9/494690378_4043746762561672_2460516455980839563_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=0024fc&_nc_ohc=RKYIOkjlhTIQ7kNvwGuIZNn&_nc_oc=AdnZ-CGmpPNYlQXT7CSuAx-EHnzUgWSUiA0YKrIOXz67O-3kMX7lceyChiE6dVGDj08Vuwn55-okWyeQIOY-m3KE&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent.fmnl4-6.fna&oh=03_Q7cD2AElCTmHtBHs_Q1tPyQcIvumTgiELC2tIt6SLFZAVPgpag&oe=6839D7EB"
-                    alt="Work 1">
-            </button>
-            <button
-                onclick="openModal('Work 2', 'https://via.placeholder.com/400x250?text=Work+2', 'This is the description for Work 2.')">
-                <img src="https://via.placeholder.com/200x130?text=Work+2" alt="Work 2">
-            </button>
-            <button
-                onclick="openModal('Work 3', 'https://via.placeholder.com/400x250?text=Work+3', 'This is the description for Work 3.')">
-                <img src="https://via.placeholder.com/200x130?text=Work+3" alt="Work 3">
-            </button>
+        <div class="work-card">
+            <img src="https://instagram.fmnl4-6.fna.fbcdn.net/v/t1.15752-9/494690378_4043746762561672_2460516455980839563_n.jpg?stp=dst-jpg_s480x480_tt6&_nc_cat=111&ccb=1-7&_nc_sid=0024fc&_nc_ohc=yL7lYmNmgdcQ7kNvwEHodFl&_nc_oc=AdnkdAHRPG0iX9YrRBaytWUJDE_ilfG3dcGlMxcVQ0qzfmO2E16JuaUQe1i4KISrZcBYgJn0vdTplYz3lkBe1Fp5&_nc_zt=23&_nc_ht=instagram.fmnl4-6.fna&oh=03_Q7cD2QH92QhCzXED4XDgplFHscDYvJz3dI64MC6IAwpHOrd_BA&oe=68597BEB"
+                alt="Project Screenshot">
+            <div class="card-content">
+                <h3>Dash Board Style</h3>
+                <p class="description">
+                    A mobile-friendly portfolio dashboard showcases a creative developer and designer with a clean,
+                    card-based layout.
+                    <span class="more-text">It features sections for personal intro, projects, and skill levels in HTML,
+                        CSS, JavaScript, and Python. The minimalist design with soft shadows and vibrant gradients makes
+                        it both visually appealing and easy to navigate.</span>
+                    <span class="see-more" onclick="toggleMore(this)">See More</span>
+                </p>
+
+
+                <div class="tags">
+                    <span>HTML</span></span>
+                    <span>CSS</span>
+                    <span>Script</span>
+                </div>
+
+                <div class="buttons">
+                    <a class="live-demo" href="https://marc15mr.github.io/Dash-Board-Style/" target="_blank"
+                        rel="noopener noreferrer">Live Demo</a>
+                    <a class="view-code" href="dashboard.zip" download>View Code</a>
+                </div>
+            </div>
         </div>
+
     </section>
 
-    <div id="imageModal"
-        style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background-color:rgba(0,0,0,0.8); justify-content:center; align-items:center; z-index:2000;">
-        <div
-            style="background:#1a0033; padding:20px; border-radius:12px; max-width:600px; width:90%; text-align:center; position:relative;">
-            <span onclick="closeModal()"
-                style="position:absolute; top:10px; right:15px; font-size:20px; color:white; cursor:pointer;">&times;</span>
-            <h2 id="modalTitle" style="color:#657bf7; margin-bottom:10px;"></h2>
-            <img id="modalImage" src="" alt="Modal Image"
-                style="max-width:100%; border-radius:10px; border:4px solid rgb(0, 47, 202); box-shadow:0 0 10px #6600cc;">
-            <p id="modalDesc" style="color:white; margin-top:15px;"></p>
-        </div>
-    </div>
 
     <section id="portfolio">
         <h2>Gallery</h2>
@@ -1978,7 +2093,7 @@
                 }
 
                 // Extra Examples
-                
+
                 else if (cmd.includes("change theme")) {
                     response = "Switching to stealth mode.";
                     document.body.classList.toggle("dark-theme"); // assumes you have a theme class
@@ -2024,7 +2139,16 @@
                 }
             });
 
-
+            function toggleMore(element) {
+                const moreText = element.previousElementSibling;
+                if (moreText.style.display === "inline") {
+                    moreText.style.display = "none";
+                    element.textContent = "See More";
+                } else {
+                    moreText.style.display = "inline";
+                    element.textContent = "See Less";
+                }
+            }
 
 
         </script>
